Añadir función de saludo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
     <h1>Bienvenido al Taller de Eventos</h1>
 
-    <button id="saludarBtn">Saludar</button>
+    <button id="saludarBtn" onclick="saludar()">Saludar</button>
+
+<script>
+    function saludar() {
+        alert("¡Hola!");
+    }
+</script>
 
 </body>
 </html>
