Agregar contenedor div al botón con estilos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <h1>Bienvenido al Taller de Eventos</h1>
 
-    <button id="saludarBtn" onclick="saludar()">Saludar</button>
+    <div id="contenedorBoton" style="padding: 5px; background-color: green;">
+        <button id="saludarBtn" onclick="saludarDesdeJS()">Saludar</button>
+    </div>
 
 <script>
     function saludar() {
